# unicode-grapheme

./: .gitignore  .hlint.yaml  README.md  cabal.project  flake.nix  hie.yaml  unicode-grapheme.cabal
.github/workflows/: ci.yaml
benchmarks/: Main.hs
docs/: Unicode-Grapheme.html  doc-index.html  doc-index.json  index.html  unicode-grapheme.haddock
docs/src/: Unicode.Grapheme.html
lib/unicode-grapheme/: CHANGELOG.md  README.md  unicode-grapheme.cabal
lib/unicode-grapheme-common/: CHANGELOG.md  README.md  unicode-grapheme-common.cabal
lib/unicode-grapheme-common/Unicode/Grapheme/Common/DB/: GraphemeClusterBreak.hs  Parsing.hs
lib/unicode-grapheme-common/src/Unicode/Grapheme/Common/: Utils.hs  Version.hs
lib/unicode-grapheme-common/src/Unicode/Grapheme/Common/DB/: GraphemeClusterBreak.hs  Parsing.hs
lib/unicode-grapheme-generator/: CHANGELOG.md  README.md  unicode-grapheme-generator.cabal
lib/unicode-grapheme-generator/app/: Main.hs
lib/unicode-grapheme-generator/benchmarks/: Main.hs  baseline.csv  baseline_ubuntu-latest_9.10.2_ci.csv  baseline_ubuntu-latest_9.12.2_ci.csv  baseline_ubuntu-latest_9.2.8_ci.csv  baseline_ubuntu-latest_9.4.8_ci.csv  baseline_ubuntu-latest_9.6.6_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv
lib/unicode-grapheme-generator/src/Unicode/Grapheme/Generator/: Utils.hs  Version.hs
lib/unicode-grapheme-generator/src/Unicode/Grapheme/Generator/DB/: DerivedCoreProperty.hs  DerivedEastAsianWidth.hs  EmojiData.hs  GraphemeBreakProperty.hs  GraphemeClusterBreak.hs  Parsing.hs  V14_0.hs  V15_0.hs  V15_1.hs  V16_0.hs
lib/unicode-grapheme-internal/Unicode/Grapheme/Internal/: ClusterState.hs  V15_0.hs  V15_1.hs  V16_0.hs
lib/unicode-grapheme-internal/Unicode/Grapheme/Internal/DB/: Properties.hs
lib/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_0/: DB.hs
lib/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_0/DB/: Generated.hs
lib/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_1/DB/: Generated.hs
lib/unicode-grapheme-internal/Unicode/Internal/: ClusterState.hs  Utils.hs  V15_0.hs  V15_1.hs  V16_0.hs  Version.hs
lib/unicode-grapheme-internal/Unicode/Internal/DB/: Common.hs  Properties.hs  Utils.hs
lib/unicode-grapheme-internal/Unicode/Internal/DB/Common/: DerivedCoreProperty.hs  EmojiData.hs  GraphemeBreakProperty.hs  Utils.hs
lib/unicode-grapheme-internal/Unicode/Internal/V15_0/: DB.hs
lib/unicode-grapheme-internal/Unicode/Internal/V15_0/DB/: Generated.hs
lib/unicode-grapheme-internal/Unicode/Internal/V15_1/: DB.hs
lib/unicode-grapheme-internal/Unicode/Internal/V15_1/DB/: Generated.hs
lib/unicode-grapheme-internal/Unicode/Internal/V16_0/: DB.hs
lib/unicode-grapheme-internal/Unicode/Internal/V16_0/DB/: Generated.hs
lib/unicode-grapheme-shared-tests/: unicode-grapheme-shared-tests.cabal
lib/unicode-grapheme-shared-tests/test/: Main.hs
lib/unicode-grapheme/Unicode/: Grapheme.hs
lib/unicode-grapheme/benchmarks/: Main.hs  baseline.csv  baseline_ubuntu-latest_9.10.2_ci.csv  baseline_ubuntu-latest_9.12.2_ci.csv  baseline_ubuntu-latest_9.2.8_ci.csv  baseline_ubuntu-latest_9.4.8_ci.csv  baseline_ubuntu-latest_9.6.6_ci.csv  baseline_ubuntu-latest_9.8.4_ci.csv  sample.txt
lib/unicode-grapheme/src/Unicode/: Grapheme.hs
lib/unicode-grapheme/test/unit/: Main.hs
lib/unicode-grapheme/test/unit/Unit/: Utils.hs
lib/unicode-grapheme/test/unit/Unit/Unicode/: Grapheme.hs
lib/unicode-grapheme/test/unit/Unit/Unicode/Grapheme/Internal/: ClusterState.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/: ClusterState.hs  Utils.hs  V14_0.hs  V15_0.hs  V15_1.hs  V16_0.hs  Version.hs  Width.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/DB/: GraphemeClusterBreak.hs  Parsing.hs  Properties.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V14_0/: DB.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V14_0/DB/: Generated.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_0/: DB.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_0/DB/: Generated.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_1/: DB.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V15_1/DB/: Generated.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V16_0/: DB.hs
lib/unicode-grapheme/unicode-grapheme-internal/Unicode/Grapheme/Internal/V16_0/DB/: Generated.hs
scripts/: check.sh  outdated.sh  update_benches.sh
test/unit/Unit/: Utils.hs
test/unit/Unit/Unicode/: Grapheme.hs
tools/: bench.sh  haddock.sh
