cabal-version:   3.0
name:            unicode-grapheme-common
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:       2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/unicode-grapheme/
bug-reports:     https://github.com/tbidne/unicode-grapheme/issues
synopsis:        Internal package used by unicode-grapheme.
description:
  This package provides functions/types are used to implement unicode-grapheme.
  It has been split out purely so it can be used in multiple packages
  (external module generator and unicode-grapheme itself). The API is unstable
  and can change at any time.

category:        Text, Unicode
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/unicode-grapheme

common common-lang
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveGeneric
    DeriveLift
    DerivingStrategies
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

library
  import:          common-lang
  exposed-modules:
    Unicode.Grapheme.Common.DB.GraphemeClusterBreak
    Unicode.Grapheme.Common.DB.Parsing
    Unicode.Grapheme.Common.Utils
    Unicode.Grapheme.Common.Version

  build-depends:
    , base              >=4.14.0.0  && <4.22
    , bytestring        >=0.10.12.0 && <0.13
    , filepath          >=1.5       && <1.6
    , hashable          >=1.4.0.2   && <1.6
    , template-haskell  >=2.16.0.0  && <2.24

  hs-source-dirs:  ./
