cabal-version:   3.0
name:            unicode-grapheme-generator
version:         0.1
license:         MIT
license-file:    LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:       2025 Thomas Bidne
author:          Thomas Bidne
maintainer:      tbidne@protonmail.com
homepage:        https://github.com/tbidne/unicode-grapheme/
bug-reports:     https://github.com/tbidne/unicode-grapheme/issues
synopsis:        Module generator for unicode-grapheme.
description:
  This package provides an executable that generates modules in
  unicode-grapheme based on the unicode database.

category:        Text, Unicode
extra-doc-files: CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/unicode-grapheme

common common-lang
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

-- NOTE: There are several duplicate modules between here and unicode-grapheme:
--
--  - DB.GraphemeClusterBreak
--  - DB.Parsing
--  - Version
--
-- Both libs require some common functionality in these modules, hence they
-- used to be part of a separate unicode-grapheme-common library, upon
-- which both depended.
--
-- However, unicode-grapheme-common was primarily internal details that we
-- would not otherwise want to expose, which is a problem if we ever wanted
-- to publish unicode-grapheme. Hence we copy the needed functionality into
-- each library directly, as there is not much.
--
-- The takeaway is that if one of those modules needs to be updated at some
-- point, consider updating the other.

library
  import:          common-lang
  exposed-modules:
    Unicode.Grapheme.Generator.DB.DerivedCoreProperty
    Unicode.Grapheme.Generator.DB.DerivedEastAsianWidth
    Unicode.Grapheme.Generator.DB.EmojiData
    Unicode.Grapheme.Generator.DB.GraphemeBreakProperty
    Unicode.Grapheme.Generator.DB.GraphemeClusterBreak
    Unicode.Grapheme.Generator.DB.Parsing
    Unicode.Grapheme.Generator.DB.V14_0
    Unicode.Grapheme.Generator.DB.V15_0
    Unicode.Grapheme.Generator.DB.V15_1
    Unicode.Grapheme.Generator.DB.V16_0
    Unicode.Grapheme.Generator.Utils
    Unicode.Grapheme.Generator.Version

  build-depends:
    , base                  >=4.14.0.0  && <4.22
    , bytestring            >=0.10.12.0 && <0.13
    , containers            >=0.6.3.1   && <0.9
    , file-io               ^>=0.1.0.0
    , filepath              >=1.5       && <1.6
    , hashable              >=1.4.0.2   && <1.6
    , text                  >=1.2.4.0   && <2.2
    , text-builder-linear   ^>=0.1.3
    , unordered-containers  ^>=0.2.20

  hs-source-dirs:  src

executable unicode-grapheme-generator
  import:         common-lang
  main-is:        Main.hs
  build-depends:
    , base
    , filepath
    , unicode-grapheme-generator

  hs-source-dirs: app

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , directory                   ^>=1.3.8.0
    , filepath
    , tasty-bench                 >=0.3      && <0.5
    , unicode-grapheme-generator

  hs-source-dirs: benchmarks
