cabal-version:      3.0
name:               unicode-grapheme
version:            0.1
license:            MIT
license-file:       LICENSE
tested-with:
  GHC ==9.2.8
   || ==9.4.8
   || ==9.6.6
   || ==9.8.4
   || ==9.10.2
   || ==9.12.2

copyright:          2025 Thomas Bidne
author:             Thomas Bidne
maintainer:         tbidne@protonmail.com
homepage:           https://github.com/tbidne/unicode-grapheme/
bug-reports:        https://github.com/tbidne/unicode-grapheme/issues
synopsis:           Breaks text on grapheme clusters.
description:
  Provides functions for breaking text on grapheme clusters without a
  `libicu` dependency. Works across multiple unicode versions.

category:           Text, Unicode
extra-source-files: README.md
extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/tbidne/unicode-grapheme

common common-lang
  default-extensions:
    BangPatterns
    DataKinds
    DeriveAnyClass
    DeriveFunctor
    DeriveGeneric
    DerivingStrategies
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoFieldSelectors
    OverloadedLabels
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    RankNTypes
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    StrictData
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators

  default-language:   Haskell2010

library unicode-grapheme-internal
  import:          common-lang
  visibility:      private
  exposed-modules:
    Unicode.Grapheme.Internal.ClusterState
    Unicode.Grapheme.Internal.DB.Properties
    Unicode.Grapheme.Internal.V14_0
    Unicode.Grapheme.Internal.V14_0.DB
    Unicode.Grapheme.Internal.V14_0.DB.Generated
    Unicode.Grapheme.Internal.V15_0
    Unicode.Grapheme.Internal.V15_0.DB
    Unicode.Grapheme.Internal.V15_0.DB.Generated
    Unicode.Grapheme.Internal.V15_1
    Unicode.Grapheme.Internal.V15_1.DB
    Unicode.Grapheme.Internal.V15_1.DB.Generated
    Unicode.Grapheme.Internal.V16_0
    Unicode.Grapheme.Internal.V16_0.DB
    Unicode.Grapheme.Internal.V16_0.DB.Generated
    Unicode.Grapheme.Internal.Width

  build-depends:
    , base                     >=4.14.0.0 && <4.22
    , bitvec                   ^>=1.1.5.0
    , containers               >=0.6.3.1  && <0.9
    , hashable                 >=1.4.0.2  && <1.6
    , text                     >=1.2.4.0  && <2.2
    , unicode-grapheme-common  ^>=0.1
    , unordered-containers     ^>=0.2.20
    , vector                   >=0.12.3.0 && <0.14

  hs-source-dirs:  unicode-grapheme-internal

library
  import:          common-lang
  exposed-modules: Unicode.Grapheme
  build-depends:
    , base                       >=4.14.0.0 && <4.22
    , text                       >=1.2.4.0  && <2.2
    , unicode-grapheme-common
    , unicode-grapheme-internal

  hs-source-dirs:  src

test-suite unit
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  other-modules:
    Unit.Unicode.Grapheme
    Unit.Unicode.Grapheme.Internal.ClusterState
    Unit.Utils

  build-depends:
    , base
    , bytestring                 >=0.10.12.0 && <0.13
    , containers
    , file-io                    ^>=0.1.0.0
    , filepath                   >=1.5       && <1.6
    , tasty                      >=1.1.0.3   && <1.6
    , tasty-hunit                >=0.9       && <0.11
    , tasty-rerun                ^>=1.1.17
    , text
    , unicode-grapheme
    , unicode-grapheme-common
    , unicode-grapheme-internal

  hs-source-dirs: test/unit

benchmark benchmarks
  import:         common-lang
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:
    , base
    , file-io
    , filepath
    , tasty-bench       >=0.3 && <0.5
    , text
    , unicode-grapheme

  hs-source-dirs: benchmarks
